headless-services/commons/jpql/src/main/java/org/springframework/ide/vscode/parser/spel/SpelParser.java
// Generated from SpelParser.g4 by ANTLR 4.13.1
package org.springframework.ide.vscode.parser.spel;

/*******************************************************************************
 * Copyright (c) 2024 Broadcom, Inc.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * https://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *     Broadcom, Inc. - initial API and implementation
 *******************************************************************************/

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SpelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, WS=2, INC=3, PLUS=4, DEC=5, MINUS=6, COLON=7, DOT=8, COMMA=9, 
		STAR=10, DIV=11, MOD=12, LPAREN=13, RPAREN=14, LSQUARE=15, RSQUARE=16, 
		HASH=17, BEAN_REF=18, SELECT_FIRST=19, POWER=20, NE=21, PROJECT=22, NOT=23, 
		EQ=24, ASSIGN=25, SYMBOLIC_AND=26, FACTORY_BEAN_REF=27, SYMBOLIC_OR=28, 
		SELECT=29, ELVIS=30, SAFE_NAVI=31, QMARK=32, SELECT_LAST=33, GE=34, GT=35, 
		LE=36, LT=37, LCURLY=38, RCURLY=39, BACKTICK=40, OR=41, AND=42, TRUE=43, 
		FALSE=44, NEW=45, NULL=46, T=47, MATCHES=48, GT_KEYWORD=49, GE_KEYWORD=50, 
		LE_KEYWORD=51, LT_KEYWORD=52, EQ_KEYWORD=53, NE_KEYWORD=54, IDENTIFIER=55, 
		NUMERIC_LITERAL=56, REAL_LITERAL=57, INTEGER_LITERAL=58, STRING_LITERAL=59, 
		SINGLE_QUOTED_STRING=60, DOUBLE_QUOTED_STRING=61, ESCAPED_BACKTICK=62, 
		SPEL_IN_TEMPLATE_STRING_OPEN=63, TEMPLATE_TEXT=64;
	public static final int
		RULE_script = 0, RULE_spelExpr = 1, RULE_node = 2, RULE_nonDottedNode = 3, 
		RULE_dottedNode = 4, RULE_functionOrVar = 5, RULE_methodArgs = 6, RULE_args = 7, 
		RULE_methodOrProperty = 8, RULE_projection = 9, RULE_selection = 10, RULE_startNode = 11, 
		RULE_literal = 12, RULE_parenspelExpr = 13, RULE_typeReference = 14, RULE_possiblyQualifiedId = 15, 
		RULE_nullReference = 16, RULE_constructorReference = 17, RULE_constructorArgs = 18, 
		RULE_inlineListOrMap = 19, RULE_listBindings = 20, RULE_listBinding = 21, 
		RULE_mapBindings = 22, RULE_mapBinding = 23, RULE_beanReference = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "spelExpr", "node", "nonDottedNode", "dottedNode", "functionOrVar", 
			"methodArgs", "args", "methodOrProperty", "projection", "selection", 
			"startNode", "literal", "parenspelExpr", "typeReference", "possiblyQualifiedId", 
			"nullReference", "constructorReference", "constructorArgs", "inlineListOrMap", 
			"listBindings", "listBinding", "mapBindings", "mapBinding", "beanReference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", null, "'++'", "'+'", "'--'", "'-'", "':'", "'.'", "','", 
			"'*'", "'/'", "'%'", "'('", "')'", "'['", "']'", "'#'", "'@'", "'^['", 
			"'^'", "'!='", "'!['", "'!'", "'=='", "'='", "'&&'", "'&'", "'||'", "'?['", 
			"'?:'", "'?.'", "'?'", "'$['", "'>='", "'>'", "'<='", "'<'", null, null, 
			null, "'or'", "'and'", "'true'", "'false'", "'new'", "'null'", "'T'", 
			"'matches'", "'gt'", "'ge'", "'le'", "'lt'", "'eq'", "'ne'", null, null, 
			null, null, null, null, null, "'``'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "WS", "INC", "PLUS", "DEC", "MINUS", "COLON", "DOT", 
			"COMMA", "STAR", "DIV", "MOD", "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", 
			"HASH", "BEAN_REF", "SELECT_FIRST", "POWER", "NE", "PROJECT", "NOT", 
			"EQ", "ASSIGN", "SYMBOLIC_AND", "FACTORY_BEAN_REF", "SYMBOLIC_OR", "SELECT", 
			"ELVIS", "SAFE_NAVI", "QMARK", "SELECT_LAST", "GE", "GT", "LE", "LT", 
			"LCURLY", "RCURLY", "BACKTICK", "OR", "AND", "TRUE", "FALSE", "NEW", 
			"NULL", "T", "MATCHES", "GT_KEYWORD", "GE_KEYWORD", "LE_KEYWORD", "LT_KEYWORD", 
			"EQ_KEYWORD", "NE_KEYWORD", "IDENTIFIER", "NUMERIC_LITERAL", "REAL_LITERAL", 
			"INTEGER_LITERAL", "STRING_LITERAL", "SINGLE_QUOTED_STRING", "DOUBLE_QUOTED_STRING", 
			"ESCAPED_BACKTICK", "SPEL_IN_TEMPLATE_STRING_OPEN", "TEMPLATE_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpelParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public SpelExprContext spelExpr() {
			return getRuleContext(SpelExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SpelParser.EOF, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			spelExpr(0);
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpelExprContext extends ParserRuleContext {
		public List<SpelExprContext> spelExpr() {
			return getRuleContexts(SpelExprContext.class);
		}
		public SpelExprContext spelExpr(int i) {
			return getRuleContext(SpelExprContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(SpelParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SpelParser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(SpelParser.NOT, 0); }
		public TerminalNode INC() { return getToken(SpelParser.INC, 0); }
		public TerminalNode DEC() { return getToken(SpelParser.DEC, 0); }
		public StartNodeContext startNode() {
			return getRuleContext(StartNodeContext.class,0);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public TerminalNode POWER() { return getToken(SpelParser.POWER, 0); }
		public TerminalNode STAR() { return getToken(SpelParser.STAR, 0); }
		public TerminalNode DIV() { return getToken(SpelParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(SpelParser.MOD, 0); }
		public TerminalNode GT() { return getToken(SpelParser.GT, 0); }
		public TerminalNode LT() { return getToken(SpelParser.LT, 0); }
		public TerminalNode LE() { return getToken(SpelParser.LE, 0); }
		public TerminalNode GE() { return getToken(SpelParser.GE, 0); }
		public TerminalNode EQ() { return getToken(SpelParser.EQ, 0); }
		public TerminalNode NE() { return getToken(SpelParser.NE, 0); }
		public TerminalNode GT_KEYWORD() { return getToken(SpelParser.GT_KEYWORD, 0); }
		public TerminalNode LT_KEYWORD() { return getToken(SpelParser.LT_KEYWORD, 0); }
		public TerminalNode LE_KEYWORD() { return getToken(SpelParser.LE_KEYWORD, 0); }
		public TerminalNode GE_KEYWORD() { return getToken(SpelParser.GE_KEYWORD, 0); }
		public TerminalNode EQ_KEYWORD() { return getToken(SpelParser.EQ_KEYWORD, 0); }
		public TerminalNode NE_KEYWORD() { return getToken(SpelParser.NE_KEYWORD, 0); }
		public TerminalNode AND() { return getToken(SpelParser.AND, 0); }
		public TerminalNode SYMBOLIC_AND() { return getToken(SpelParser.SYMBOLIC_AND, 0); }
		public TerminalNode OR() { return getToken(SpelParser.OR, 0); }
		public TerminalNode SYMBOLIC_OR() { return getToken(SpelParser.SYMBOLIC_OR, 0); }
		public TerminalNode MATCHES() { return getToken(SpelParser.MATCHES, 0); }
		public TerminalNode ASSIGN() { return getToken(SpelParser.ASSIGN, 0); }
		public TerminalNode ELVIS() { return getToken(SpelParser.ELVIS, 0); }
		public TerminalNode QMARK() { return getToken(SpelParser.QMARK, 0); }
		public TerminalNode COLON() { return getToken(SpelParser.COLON, 0); }
		public SpelExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spelExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterSpelExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitSpelExpr(this);
		}
	}

	public final SpelExprContext spelExpr() throws RecognitionException {
		return spelExpr(0);
	}

	private SpelExprContext spelExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SpelExprContext _localctx = new SpelExprContext(_ctx, _parentState);
		SpelExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_spelExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INC:
			case PLUS:
			case DEC:
			case MINUS:
			case NOT:
				{
				setState(54);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8388728L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(55);
				spelExpr(13);
				}
				break;
			case LPAREN:
			case HASH:
			case BEAN_REF:
			case SELECT_FIRST:
			case PROJECT:
			case FACTORY_BEAN_REF:
			case SELECT:
			case SELECT_LAST:
			case LCURLY:
			case TRUE:
			case FALSE:
			case NEW:
			case NULL:
			case T:
			case IDENTIFIER:
			case NUMERIC_LITERAL:
			case STRING_LITERAL:
				{
				setState(56);
				startNode();
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(57);
						node();
						}
						} 
					}
					setState(62);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(100);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(65);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(66);
						match(POWER);
						setState(67);
						spelExpr(12);
						}
						break;
					case 2:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(68);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(69);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(70);
						spelExpr(11);
						}
						break;
					case 3:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(71);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(72);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(73);
						spelExpr(10);
						}
						break;
					case 4:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(74);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(75);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 35466104782454784L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(76);
						spelExpr(9);
						}
						break;
					case 5:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(77);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(78);
						_la = _input.LA(1);
						if ( !(_la==SYMBOLIC_AND || _la==AND) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(79);
						spelExpr(8);
						}
						break;
					case 6:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(80);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(81);
						_la = _input.LA(1);
						if ( !(_la==SYMBOLIC_OR || _la==OR) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(82);
						spelExpr(7);
						}
						break;
					case 7:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(83);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(84);
						match(MATCHES);
						setState(85);
						spelExpr(6);
						}
						break;
					case 8:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(86);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(87);
						match(ASSIGN);
						setState(88);
						spelExpr(5);
						}
						break;
					case 9:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(89);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(90);
						match(ELVIS);
						setState(91);
						spelExpr(4);
						}
						break;
					case 10:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(92);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(93);
						match(QMARK);
						setState(94);
						spelExpr(0);
						setState(95);
						match(COLON);
						setState(96);
						spelExpr(3);
						}
						break;
					case 11:
						{
						_localctx = new SpelExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_spelExpr);
						setState(98);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(99);
						_la = _input.LA(1);
						if ( !(_la==INC || _la==DEC) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public DottedNodeContext dottedNode() {
			return getRuleContext(DottedNodeContext.class,0);
		}
		public NonDottedNodeContext nonDottedNode() {
			return getRuleContext(NonDottedNodeContext.class,0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
			case HASH:
			case SELECT_FIRST:
			case PROJECT:
			case SELECT:
			case SAFE_NAVI:
			case SELECT_LAST:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				dottedNode();
				}
				break;
			case LSQUARE:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				nonDottedNode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonDottedNodeContext extends ParserRuleContext {
		public TerminalNode LSQUARE() { return getToken(SpelParser.LSQUARE, 0); }
		public SpelExprContext spelExpr() {
			return getRuleContext(SpelExprContext.class,0);
		}
		public TerminalNode RSQUARE() { return getToken(SpelParser.RSQUARE, 0); }
		public NonDottedNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonDottedNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterNonDottedNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitNonDottedNode(this);
		}
	}

	public final NonDottedNodeContext nonDottedNode() throws RecognitionException {
		NonDottedNodeContext _localctx = new NonDottedNodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nonDottedNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			match(LSQUARE);
			setState(110);
			spelExpr(0);
			setState(111);
			match(RSQUARE);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DottedNodeContext extends ParserRuleContext {
		public MethodOrPropertyContext methodOrProperty() {
			return getRuleContext(MethodOrPropertyContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SpelParser.DOT, 0); }
		public TerminalNode SAFE_NAVI() { return getToken(SpelParser.SAFE_NAVI, 0); }
		public FunctionOrVarContext functionOrVar() {
			return getRuleContext(FunctionOrVarContext.class,0);
		}
		public ProjectionContext projection() {
			return getRuleContext(ProjectionContext.class,0);
		}
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public DottedNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dottedNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterDottedNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitDottedNode(this);
		}
	}

	public final DottedNodeContext dottedNode() throws RecognitionException {
		DottedNodeContext _localctx = new DottedNodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dottedNode);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
			case SAFE_NAVI:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				_la = _input.LA(1);
				if ( !(_la==DOT || _la==SAFE_NAVI) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(114);
				methodOrProperty();
				}
				break;
			case HASH:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				functionOrVar();
				}
				break;
			case PROJECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				projection();
				}
				break;
			case SELECT_FIRST:
			case SELECT:
			case SELECT_LAST:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				selection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionOrVarContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(SpelParser.HASH, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SpelParser.IDENTIFIER, 0); }
		public MethodArgsContext methodArgs() {
			return getRuleContext(MethodArgsContext.class,0);
		}
		public FunctionOrVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionOrVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterFunctionOrVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitFunctionOrVar(this);
		}
	}

	public final FunctionOrVarContext functionOrVar() throws RecognitionException {
		FunctionOrVarContext _localctx = new FunctionOrVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionOrVar);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(HASH);
				setState(121);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(HASH);
				setState(123);
				match(IDENTIFIER);
				setState(124);
				methodArgs();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodArgsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(SpelParser.LPAREN, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpelParser.RPAREN, 0); }
		public MethodArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).enterMethodArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpelParserListener ) ((SpelParserListener)listener).exitMethodArgs(this);
		}
	}
